--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/http-status-codes": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.46.0",
+    "http-status-codes": "^2.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
